--- a/assets/scss/_variables.scss
+++ b/assets/scss/_variables.scss
@@ -1,19 +1,52 @@
-$color-primary: #0a5f8e;
+/* COLORS */
+// neutral
+$color-neutral-1: #fafafa;
+$color-neutral-2: #f5f5f5;
+$color-neutral-3: #d4d4d4;
+$color-neutral-4: #949494;
+$color-neutral-5: #4e4e4e;
+$color-neutral-6: #1d1d1d;
 
-$color-neutral-10: #fff;
-$color-neutral-20: #ebf0f4;
-$color-neutral-30: #e4e9ec;
-$color-neutral-40: #d8dce0;
-$color-neutral-50: #babec1;
-$color-neutral-60: #989b9e;
-$color-neutral-70: #717375;
-$color-neutral-80: #5d5f61;
-$color-neutral-90: #3d3f40;
-$color-neutral-100: #131414;
+// green
+$color-green-1: #e9fef4;
+$color-green-2: #b9f7da;
+$color-green-3: #8ceac0;
+$color-green-4: #64d5a1;
 
-$gradient-primary: linear-gradient(
-  360deg,
-  $color-primary 0%,
-  $color-neutral-10 397.73%
-);
-$shadow-primary: 0 8px 16px rgba($color-primary, 0.15);
+// yellow
+$color-yellow-1: #fff6e3;
+$color-yellow-2: #feecc5;
+$color-yellow-3: #fee1a4;
+$color-yellow-4: #d7b46b;
+$color-yellow-5: #ae8a3e;
+
+// red
+$color-red-2: #fee1ea;
+$color-red-3: #fda1bb;
+$color-red-4: #fd739b;
+$color-red-5: #fc497c;
+$color-red-6: #fb215c;
+
+// blue
+$color-blue-2: #aedded;
+$color-blue-3: #7bc1d8;
+$color-blue-4: #54a6bf;
+$color-blue-5: #358ba6;
+$color-blue-6: #1d7896;
+
+// aliases
+$color-light: $color-neutral-1;
+$color-dark: $color-neutral-6;
+
+/* SPACING */
+$space-1: 1rem;
+
+/* SIZES */
+// width
+$width-container: 1024px;
+$width-sidebar: 240px;
+
+// height
+$height-navbar: 60px;
+$height-footer: 60px;
+$height-breadcrumb: 60px;
