--- a/assets/scss/_mixins.scss
+++ b/assets/scss/_mixins.scss
@@ -1,5 +1,17 @@
-@mixin screen-small {
-  @media only screen and (max-width: $width-container) {
+@mixin screen-desktop {
+  @media only screen and (min-width: $width-tablet) {
+    @content;
+  }
+}
+
+@mixin screen-tablet {
+  @media only screen and (max-width: $width-tablet) {
+    @content;
+  }
+}
+
+@mixin screen-mobile {
+  @media only screen and (max-width: $width-mobile) {
     @content;
   }
 }
