Finish up search page

--- a/assets/scss/_mixins.scss
+++ b/assets/scss/_mixins.scss
@@ -22,3 +22,10 @@
   right: 0;
   bottom: 0;
 }
+
+@mixin truncate($line) {
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  -webkit-line-clamp: $line;
+  overflow: hidden;
+}
