--- a/assets/scss/_mixins.scss
+++ b/assets/scss/_mixins.scss
@@ -29,3 +29,19 @@
   -webkit-line-clamp: $line;
   overflow: hidden;
 }
+
+@mixin responsive-image {
+  position: relative;
+  width: 100%;
+  &::after {
+    content: '';
+    display: block;
+    padding-bottom: 100%;
+  }
+  > img {
+    position: absolute;
+    object-fit: cover;
+    width: 100%;
+    height: 100%;
+  }
+}
